--- a/Purchase.html
+++ b/Purchase.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="./assets/css/critical.css">
   <link rel="stylesheet" href="./assets/css/style.min.css">
   <link rel="stylesheet" href="./assets/css/purchase-styles.min.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script type="application/ld+json">
