--- a/projects.html
+++ b/projects.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-    <meta name="description" content="View our portfolio of creative projects at Zeros Studio - Web design, mobile apps, and branding solutions for clients. See our successful case studies." />
-    <meta name="keywords" content="portfolio, web design projects, mobile apps, branding, creative work, indore, case studies, digital projects" />
+    <meta name="description" content="Explore our portfolio of creative projects and case studies in web design, mobile apps, and branding. See how we've helped businesses transform their digital presence.">
+    <meta name="keywords" content="portfolio, projects, web design, mobile apps, branding, case studies, creative agency, indore, ui/ux design">
     <meta name="author" content="Zeros Studio">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
-    <meta property="og:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
+    <meta property="og:description" content="Explore our portfolio of creative projects and case studies in web design, mobile apps, and branding. See how we've helped businesses transform their digital presence.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zerosstudio.vercel.app/projects.html">
     <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <meta property="og:locale" content="en_IN">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
-    <meta name="twitter:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
+    <meta name="twitter:description" content="Explore our portfolio of creative projects and case studies in web design, mobile apps, and branding. See how we've helped businesses transform their digital presence.">
     <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <link rel="canonical" href="https://zerosstudio.vercel.app/projects.html">
     <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/projects.html">
@@ -27,6 +26,7 @@
     <link rel="stylesheet" href="./assets/css/critical.css">
     <link rel="stylesheet" href="./assets/css/style.min.css">
     <link rel="stylesheet" href="./assets/css/projects-styles.min.css">
+    <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
