--- a/services.html
+++ b/services.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-    <meta name="description" content="Explore our digital services at Creative Agency Zeros - Web development, UI/UX design, mobile apps, SEO, and brand identity solutions in Indore." />
-    <meta name="keywords" content="web development, ui/ux design, mobile apps, seo, digital marketing, brand identity, creative services, indore" />
-    <meta name="author" content="Zeros Studio" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Zeros Studio" />
-    <meta property="og:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://zerosstudio.vercel.app/services.html" />
-    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
-    <meta property="og:locale" content="en_IN" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Our Services - Creative Agency Zeros" />
-    <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
-    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+    <meta name="description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and branding. Transform your business with our creative solutions in Indore." />
+    <meta name="keywords" content="services, web development, ui/ux design, mobile apps, seo, branding, digital marketing, creative agency, indore" />
+    <meta name="author" content="Zeros Studio">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Our Services - Creative Agency Zeros">
+    <meta property="og:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and branding. Transform your business with our creative solutions in Indore.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zerosstudio.vercel.app/services.html">
+    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+    <meta property="og:locale" content="en_IN">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Services - Creative Agency Zeros">
+    <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and branding. Transform your business with our creative solutions in Indore.">
+    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <link rel="canonical" href="https://zerosstudio.vercel.app/services.html" />
     <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/services.html" />
     <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/services.html" />
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/critical.css">
     <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="./assets/js/particles.min.js"></script>
