--- a/Contact.html
+++ b/Contact.html
@@ -5,26 +5,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="Contact Zeros Studio in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
-  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar, consultation">
+  <meta name="description"
+    content="Contact Zeros Studio in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
+  <meta name="keywords"
+    content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar, consultation">
   <meta name="author" content="Zeros Studio">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Contact Zeros Studio - Web Design Agency in Indore">
-  <meta property="og:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
+  <meta property="og:description"
+    content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://zerosstudio.vercel.app/Contact.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact Zeros Studio - Web Design Agency in Indore">
-  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
+  <meta name="twitter:description"
+    content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <link rel="canonical" href="https://zerosstudio.vercel.app/Contact.html">
   <title>Contact Zeros Studio - Web Design Agency in Indore</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/critical.css">
-  <link rel="stylesheet" href="./assets/css/contact.min.css">
-  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
+  <link rel="stylesheet" href="./assets/css/contact.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script type="application/ld+json">
@@ -47,7 +51,7 @@
     }
   }
   </script>
- 
+
 </head>
 
 <body>
@@ -73,10 +77,10 @@
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </header>
 
@@ -339,12 +343,19 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 ZEROS. All rights reserved.</p>
-      </div>
+          <div class="copyright">
+            &copy; 2022-32 Zeros Studio. All rights reserved.
+          </div>
+          <div class="footer-links-bottom">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Sitemap</a>
+          </div>
+        </div>
     </div>
   </footer>
 
- <script src="./assets/js/contact.min.js"></script>
+  <script src="./assets/js/contact.js"></script>
 </body>
 
 </html>
