--- a/Purchase.html
+++ b/Purchase.html
@@ -27,8 +27,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/critical.css">
-  <link rel="stylesheet" href="./assets/css/style.min.css">
-  <link rel="stylesheet" href="./assets/css/purchase-styles.min.css">
+  <link rel="stylesheet" href="./assets/css/purchase-styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script type="application/ld+json">
@@ -483,7 +482,7 @@
       </div>
     </div>
   </footer>
-  <script src="./assets/js/purchase.min.js"></script>
+  <script src="./assets/js/purchase.js"></script>
 </body>
 
 </html>
