--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/critical.css">
-  <link rel="stylesheet" href="./assets/css/about-style.min.css">
-  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
+  <link rel="stylesheet" href="./assets/css/about-style.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
@@ -320,7 +320,7 @@
                 <img src="./assets/images/avtar2.jpeg" alt="Satish Chaudhary" />
               </div>
               <div class="member-info">
-                <h2>Satish chaudhary</h2>
+                <h2>Satish Chaudhary</h2>
                 <h3>Frontend Developer</h3>
                 <p class="member-description">
                   Builds sleek, responsive interfaces with modern frameworks.
@@ -506,7 +506,7 @@
     </footer>
   </main>
 
-  <script src="./assets/js/about.min.js"></script>
+  <script src="./assets/js/about.js"></script>
 </body>
 
 </html>
