--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,7 @@
     <title>Portfolio - Zeros Studio Creative Projects & Case Studies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/critical.css">
-    <link rel="stylesheet" href="./assets/css/style.min.css">
-    <link rel="stylesheet" href="./assets/css/projects-styles.min.css">
+    <link rel="stylesheet" href="./assets/css/projects-styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
@@ -427,7 +426,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-   <script src="./assets/js/projects.min.js"></script>
+   <script src="./assets/js/projects.js"></script>
 </body>
 
 </html>
