--- a/services.html
+++ b/services.html
@@ -25,7 +25,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/critical.css">
-    <link rel="stylesheet" href="./assets/css/style.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="./assets/js/particles.min.js"></script>
@@ -507,7 +506,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="./assets/js/script.min.js"></script>
-    <script src="./assets/js/services.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/services.js"></script>
   </body>
 </html>
