--- a/Purchase.html
+++ b/Purchase.html
@@ -27,6 +27,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/purchase-styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
@@ -68,6 +69,9 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
+          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+        </li>
+        <li>
           <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
@@ -82,6 +86,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
       <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
   </header>
