--- a/about.html
+++ b/about.html
@@ -69,6 +69,9 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
+          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+        </li>
+        <li>
           <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
@@ -83,6 +86,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
       <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
   </header>
