--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="ZEROS Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta name="description" content="ZEROS Studio Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta name="keywords" content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO" />
-  <meta name="author" content="ZEROS Creative Agency" />
+  <meta name="author" content="ZEROS Studio Creative Agency" />
   <meta name="robots" content="index, follow" />
-  <meta property="og:title" content="ZEROS Creative Agency - Digital Experience Design" />
+  <meta property="og:title" content="ZEROS Studio Creative Agency - Digital Experience Design" />
   <meta property="og:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://zerosstudio.vercel.app/" />
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <meta property="og:locale" content="en_IN" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ZEROS Creative Agency - Digital Experience Design" />
+  <meta name="twitter:title" content="ZEROS Studio Creative Agency - Digital Experience Design" />
   <meta name="twitter:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <link rel="canonical" href="https://zerosstudio.vercel.app/" />
@@ -95,6 +95,9 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
+          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+        </li>
+        <li>
           <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
@@ -113,6 +116,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
       <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
     <section class="hero">
