--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,7 @@
                 <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
                 <li><a href="about.html" class="nav-link"><span>About</span></a></li>
                 <li><a href="projects.html" class="nav-link active"><span>Projects</span></a></li>
+                <li><a href="blog.html" class="nav-link"><span>Blog</span></a></li>
                 <li><a href="Purchase.html" class="nav-link"><span>Pricing</span></a></li>
                 <li><a href="Contact.html" class="nav-link"><span>Contact</span></a></li>
             </ul>
@@ -71,6 +72,7 @@
             <li class="second-nav-li"><a href="index.html">Home</a></li>
             <li class="second-nav-li"><a href="about.html">About</a></li>
             <li class="second-nav-li"><a href="projects.html">Project</a></li>
+            <li class="second-nav-li"><a href="blog.html">Blog</a></li>
             <li class="second-nav-li"><a href="Purchase.html">Pricing</a></li>
             <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
         </ul>
