--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://zerosstudio.vercel.app/services.html" />
     <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
     <meta property="og:locale" content="en_IN" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Our Services - Creative Agency Zeros" />
     <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
@@ -66,6 +67,9 @@
             <a href="projects.html" class="nav-link"><span>Projects</span></a>
           </li>
           <li>
+            <a href="blog.html" class="nav-link"><span>Blog</span></a>
+          </li>
+          <li>
             <a href="Contact.html" class="nav-link"><span>Contact</span></a>
           </li>
         </ul>
@@ -82,6 +86,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
       <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
 
