--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="ZEROS Studio Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
-  <meta name="keywords" content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO" />
+  <meta name="description"
+    content="ZEROS Studio Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta name="keywords"
+    content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO" />
   <meta name="author" content="ZEROS Studio Creative Agency" />
   <meta name="robots" content="index, follow" />
   <meta property="og:title" content="ZEROS Studio Creative Agency - Digital Experience Design" />
-  <meta property="og:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta property="og:description"
+    content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://zerosstudio.vercel.app/" />
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <meta property="og:locale" content="en_IN" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="ZEROS Studio Creative Agency - Digital Experience Design" />
-  <meta name="twitter:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta name="twitter:description"
+    content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <link rel="canonical" href="https://zerosstudio.vercel.app/" />
   <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/" />
   <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/" />
   <title>Zeros Studio</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/critical.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/fontawesome.css">
@@ -56,26 +63,35 @@
   </script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79QW0XLL04"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-79QW0XLL04');
+</script>
 
 <body>
   <!-- Preloader -->
   <div class="preloader">
-      <div class="loader">
-        <svg viewBox="0 0 80 80">
-          <circle id="test" cx="40" cy="40" r="32"></circle>
-        </svg>
-      </div>
-      <div class="loader triangle">
-        <svg viewBox="0 0 86 80">
-          <polygon points="43 8 79 72 7 72"></polygon>
-        </svg>
-      </div>
-      <div class="loader">
-        <svg viewBox="0 0 80 80">
-          <rect x="8" y="8" width="64" height="64"></rect>
-        </svg>
-      </div>
+    <div class="loader">
+      <svg viewBox="0 0 80 80">
+        <circle id="test" cx="40" cy="40" r="32"></circle>
+      </svg>
     </div>
+    <div class="loader triangle">
+      <svg viewBox="0 0 86 80">
+        <polygon points="43 8 79 72 7 72"></polygon>
+      </svg>
+    </div>
+    <div class="loader">
+      <svg viewBox="0 0 80 80">
+        <rect x="8" y="8" width="64" height="64"></rect>
+      </svg>
+    </div>
+  </div>
 
   <!-- Header -->
   <header>
@@ -102,10 +118,10 @@
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </header>
 
@@ -646,7 +662,9 @@
               <span class="project-tag">Healthcare Dashboard</span>
               <h3 class="project-name">Patient Health Monitoring System</h3>
               <p class="project-description">
-                A comprehensive healthcare dashboard designed for medical professionals to monitor patient vitals, track treatment progress, and manage appointments. This system integrates real-time data from multiple sources to provide actionable insights and improve patient outcomes.
+                A comprehensive healthcare dashboard designed for medical professionals to monitor patient vitals, track
+                treatment progress, and manage appointments. This system integrates real-time data from multiple sources
+                to provide actionable insights and improve patient outcomes.
               </p>
               <ul class="project-highlights">
                 <li class="project-highlight">
@@ -684,7 +702,9 @@
               <span class="project-tag">Fashion Store</span>
               <h3 class="project-name">Elegant Fashion E-commerce Platform</h3>
               <p class="project-description">
-                A sophisticated e-commerce solution designed specifically for luxury fashion brands. This platform combines stunning visual aesthetics with seamless functionality to showcase collections, manage inventory, and provide an exceptional shopping experience that reflects the brand's premium identity.
+                A sophisticated e-commerce solution designed specifically for luxury fashion brands. This platform
+                combines stunning visual aesthetics with seamless functionality to showcase collections, manage
+                inventory, and provide an exceptional shopping experience that reflects the brand's premium identity.
               </p>
               <ul class="project-highlights">
                 <li class="project-highlight">
@@ -1027,8 +1047,8 @@
                   title="GitHub">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="LinkedIn">
+                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" class="social-link"
@@ -1058,8 +1078,8 @@
                   title="GitHub">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="LinkedIn">
+                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://dribbble.com/" target="_blank" rel="noopener noreferrer" class="social-link"
@@ -1093,8 +1113,8 @@
                   title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://stackoverflow.com/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="Stack Overflow">
+                <a href="https://stackoverflow.com/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="Stack Overflow">
                   <i class="fab fa-instagram"></i>
                 </a>
               </div>
@@ -1116,16 +1136,16 @@
                 research and prototyping.
               </p>
               <div class="team-socials">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="GitHub">
+                <a href="https://github.com/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="GitHub">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="LinkedIn">
+                <a href="https://linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://behance.net/" target="_blank" rel="noopener noreferrer"
-                  class="social-link" title="Behance">
+                <a href="https://behance.net/" target="_blank" rel="noopener noreferrer" class="social-link"
+                  title="Behance">
                   <i class="fab fa-instagram"></i>
                 </a>
               </div>
@@ -1187,7 +1207,8 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form action="https://formspree.io/f/xrbyedlg" post="Post" class="footer-newsletter-form" id="newsletterForm">
+            <form action="https://formspree.io/f/xrbyedlg" post="Post" class="footer-newsletter-form"
+              id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
               <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
