--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@
             <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form"
               id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
-              <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
+              <button type="submit" class="newsletter-button" >
                 <i class="fas fa-paper-plane"></i>
               </button>
             </form>
