--- a/projects.html
+++ b/projects.html
@@ -378,7 +378,7 @@
                         </p>
                         <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form" id="newsletterForm">
                           <input type="email" placeholder="Enter your email" required />
-                          <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
+                          <button type="submit" class="newsletter-button" >
                             <i class="fas fa-paper-plane"></i>
                           </button>
                         </form>
