--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     }
   }
   </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7621401186463500"
+     crossorigin="anonymous"></script>
 
 </head>
 <!-- Google tag (gtag.js) -->
